# colander-data-converter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  dev-requirements.txt  export_theme_icons.py  generate_conversion_matrix.py  generate_types.py  pyproject.toml  requirements.txt  tox.ini
.github/: SECURITY.md
.github/workflows/: build.yml  codeql.yml  release.yml  snyk-security.yml  test.yml
.run/: pytest.run.xml
code_templates/: actor_types.jinja2  artifact_types.jinja2  data_fragment_types.jinja2  detection_rule_types.jinja2  device_types.jinja2  event_types.jinja2  observable_types.jinja2  threat_types.jinja2  type_doc.jinja2
colander_data_converter/base/: common.py  models.py  utils.py
colander_data_converter/data/: actor_types.json  artifact_types.json  data_fragment_types.json  detection_rule_types.json  device_types.json  event_types.json  observable_types.json  threat_types.json
colander_data_converter/exporters/: csv.py  exporter.py  graphviz.py  mermaid.py  template.py
colander_data_converter/tests/: test_artifact.py  test_entity_feed.py  test_event.py  test_relations.py
docs/: Makefile  __init__.py  conf.py  convert_data.rst  export_data.rst  index.rst  knowledge_graph.rst  load_export_data.rst  load_save_data.rst  requirements.txt  tips_and_tricks.rst
docs/_ext/: colander.py
docs/_templates/: colander-type.tmpl  conversion-matrix.tmpl  layout.html  misp-type.tmpl  stix2-type.tmpl
docs/data/: conversion_matrix.json
docs/data_types/: colander.rst  conversion_matrix.rst  entity.rst  misp.rst  misp_definitions.rst  stix2.rst  threatr.rst  type.tmpl
docs/source/: colander_data_converter.base.common.rst  colander_data_converter.base.models.rst  colander_data_converter.base.rst  colander_data_converter.base.types.actor.rst  colander_data_converter.base.types.artifact.rst  colander_data_converter.base.types.base.rst  colander_data_converter.base.types.data_fragment.rst  colander_data_converter.base.types.detection_rule.rst  colander_data_converter.base.types.device.rst  colander_data_converter.base.types.event.rst  colander_data_converter.base.types.observable.rst  colander_data_converter.base.types.rst  colander_data_converter.base.types.threat.rst  colander_data_converter.base.utils.rst  colander_data_converter.converters.misp.converter.rst  colander_data_converter.converters.misp.models.rst  colander_data_converter.converters.misp.rst  colander_data_converter.converters.rst  colander_data_converter.converters.stix2.converter.rst  colander_data_converter.converters.stix2.mapping.rst  colander_data_converter.converters.stix2.models.rst  colander_data_converter.converters.stix2.rst  colander_data_converter.converters.stix2.utils.rst  colander_data_converter.converters.threatr.converter.rst  colander_data_converter.converters.threatr.mapping.rst  colander_data_converter.converters.threatr.models.rst  colander_data_converter.converters.threatr.rst  colander_data_converter.exporters.csv.rst  colander_data_converter.exporters.exporter.rst  colander_data_converter.exporters.graphviz.rst  colander_data_converter.exporters.mermaid.rst  colander_data_converter.exporters.rst  colander_data_converter.exporters.template.rst  colander_data_converter.formats.misp.models.rst  colander_data_converter.formats.misp.rst  colander_data_converter.formats.rst  colander_data_converter.formats.stix2.converter.rst  colander_data_converter.formats.stix2.mapping.rst  colander_data_converter.formats.stix2.models.rst  colander_data_converter.formats.stix2.rst  (+7 more)
tests/: test_artifact.py  test_entity_feed.py  test_event.py  test_singleton.py
tests/base/: test_artifact.py  test_entity_feed.py  test_event.py  test_feed.py  test_observable_regex.py  test_relations.py  test_singleton.py  test_supported_types.py  test_utils.py
(+73 files in other folders)
