[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["colander_data_converter*"]
namespaces = false

[tool.coverage.runx]
omit = [
    "*test_*",
    ]

[tool.coverage.report]
omit = [
    "tests/*",
    ]

[project]
name = "colander-data-converter"
version = "1.0.0"
description = "A set of helpers to manipulate Colander data."
readme = "README.md"
license = { text = "GPL-3.0+ AND MIT" }

requires-python = ">= 3.11"
dependencies = [
    "pydantic==2.11",
]

authors = [
    { name = "U+039b", email = "hello@pts-project.org" }
]

maintainers = [
    { name = "U+039b", email = "hello@pts-project.org" }
]

[project.urls]
repository = "https://github.com/PiRogueToolSuite/colander-data-converter"
issues = "https://github.com/PiRogueToolSuite/colander-data-converter/issues"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E722"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"